--- a/01-SVG/css/style.css
+++ b/01-SVG/css/style.css
@@ -1,3 +1,8 @@
 body {
-      font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
+}
+
+svg {
+	/*border: 2px solid black;*/
+	width: 1000px;
 }
